This commit contains mutiple changes related to main functionality of the framework. Fixing the logging functionality, stepts to reproduce and steps definition Also added allure report generation and evidence attaching when a failure is happening ALso, adding screeshots for each step if needed. Added AllureUtils class to handle the attachements for the API and logs attachemnts
Also improved allure report to be able to see multiple details